--- a/solid/package.json
+++ b/solid/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "start": "node build/server.js"
@@ -18,9 +22,12 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.12.11",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.6.0",
     "@vitest/ui": "1.6.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.13.0",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.10.1",
     "typescript": "5.4.5",
@@ -28,6 +35,7 @@
     "vitest": "1.6.0"
   },
   "dependencies": {
+    "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.13.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.11",
