--- a/ddd e framework/package.json
+++ b/ddd e framework/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/node": "^20.14.0",
     "tsup": "^8.1.0",
     "tsx": "^4.11.2",
