--- a/nest-js/docker-compose.yml
+++ b/nest-js/docker-compose.yml
@@ -16,3 +16,10 @@ services:
       - "${DATABASE_PORT}:${DATABASE_PORT}"
     volumes:
       - ./data/pg:/data/postgres
+  
+  cache:
+    image: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - ./data/redis:/data
